# py-logistics

./: Dockerfile  PROJECT_STRUCTURE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
analytics/: __init__.py  risk_scoring.py
analytics/forecasting/: demand_forecaster.py  lead_time_forecaster.py
analytics/metrics/: dashboard.py  kpi_calculator.py
analytics/optimization/: cost_optimizer.py  inventory_optimizer.py  routing_optimizer.py
analytics/reporting/: report_generator.py
application/dto/: common.py  inventory.py  order.py  supplier.py  transportation.py
application/services/: audit_service.py  notification_service.py  reporting_service.py
application/use_cases/: __init__.py
application/workflows/: __init__.py  order_fulfillment.py  replenishment.py  warehouse_transfer.py
config/: database.py  features.py  logging.py  settings.py
docs/: api.md  architecture.md  deployment.md  development.md  domain_models.md
domain/common/: exceptions.py  models.py
events/: __init__.py  dispatcher.py  handlers.py  models.py
infrastructure/: __init__.py
infrastructure/cache/: cache_service.py  (+1 more)
interfaces/: __init__.py
inventory/: __init__.py  exceptions.py  models.py  repository.py  services.py  value_objects.py
logistics_mvp/: ARCHITECTURE_DECISIONS.md  README.md
mvp/: README.md  requirements.txt
order/: __init__.py  exceptions.py  models.py  repository.py  services.py  validation.py
scripts/: cleanup.py  generate_report.py  migrate.py  seed_data.py
simulation/: __init__.py  engine.py
supplier/: __init__.py  exceptions.py  models.py  repository.py  scoring.py  services.py
tests/: conftest.py
transportation/: __init__.py  exceptions.py  models.py  repository.py  routing.py  services.py
warehouse/: __init__.py  exceptions.py  models.py  repository.py  services.py
workflows/: cd.yml  ci.yml
(+83 files in other folders)
